--- a/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
+++ b/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
@@ -78,12 +78,18 @@
     <Content Include="App\main.js" />
     <Content Include="App\viewmodels\flickr.js" />
     <Content Include="App\viewmodels\home.js" />
+    <Content Include="App\viewmodels\oneTextDialog.js" />
+    <Content Include="App\viewmodels\customModal.js" />
     <Content Include="App\viewmodels\shell.js" />
+    <Content Include="App\viewmodels\signIn.js" />
     <Content Include="App\viewmodels\welcome.js" />
     <Content Include="App\views\detail.html" />
     <Content Include="App\views\flickr.html" />
     <Content Include="App\views\home.html" />
+    <Content Include="App\views\oneTextDialog.html" />
+    <Content Include="App\views\customModal.html" />
     <Content Include="App\views\shell.html" />
+    <Content Include="App\views\signIn.html" />
     <Content Include="App\views\welcome.html" />
     <Content Include="App__\durandal\plugins\router.js" />
     <Content Include="App__\main.js" />
