--- a/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
+++ b/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
@@ -73,9 +73,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App\core\data\data.js" />
     <Content Include="App\core\multilingual\dictionary.js" />
     <Content Include="App\core\multilingual\dictionary.ts" />
     <Content Include="App\main.js" />
+    <Content Include="App\viewmodels\breadcrumb.js" />
     <Content Include="App\viewmodels\flickr.js" />
     <Content Include="App\viewmodels\product.js" />
     <Content Include="App\viewmodels\products.js" />
@@ -84,6 +86,7 @@
     <Content Include="App\viewmodels\shell.js" />
     <Content Include="App\viewmodels\signIn.js" />
     <Content Include="App\viewmodels\welcome.js" />
+    <Content Include="App\views\breadcrumb.html" />
     <Content Include="App\views\detail.html" />
     <Content Include="App\views\flickr.html" />
     <Content Include="App\views\product.html" />
@@ -106,9 +109,11 @@
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\font\fontawesome-webfont.svg" />
     <Content Include="Content\ie10mobile.css" />
+    <Content Include="Content\images\content.png" />
     <Content Include="Content\images\icon.png" />
     <Content Include="Content\images\ios-startup-image-landscape.png" />
     <Content Include="Content\images\ios-startup-image-portrait.png" />
+    <Content Include="Content\SiteMain.css" />
     <Content Include="Content\starterkit.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="index.html" />
