--- a/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
+++ b/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
@@ -79,21 +79,25 @@
     <Content Include="App\main.js" />
     <Content Include="App\viewmodels\breadcrumb.js" />
     <Content Include="App\viewmodels\flickr.js" />
+    <Content Include="App\viewmodels\mainmenu.js" />
     <Content Include="App\viewmodels\product.js" />
     <Content Include="App\viewmodels\products.js" />
     <Content Include="App\viewmodels\oneTextDialog.js" />
     <Content Include="App\viewmodels\customModal.js" />
     <Content Include="App\viewmodels\shell.js" />
+    <Content Include="App\viewmodels\sidemenu.js" />
     <Content Include="App\viewmodels\signIn.js" />
     <Content Include="App\viewmodels\welcome.js" />
     <Content Include="App\views\breadcrumb.html" />
     <Content Include="App\views\detail.html" />
     <Content Include="App\views\flickr.html" />
+    <Content Include="App\views\mainmenu.html" />
     <Content Include="App\views\product.html" />
     <Content Include="App\views\products.html" />
     <Content Include="App\views\oneTextDialog.html" />
     <Content Include="App\views\customModal.html" />
     <Content Include="App\views\shell.html" />
+    <Content Include="App\views\sidemenu.html" />
     <Content Include="App\views\signIn.html" />
     <Content Include="App\views\welcome.html" />
     <Content Include="App__\durandal\plugins\router.js" />
