--- a/Implementation/WebShopUI/WebShopUI/packages.config
+++ b/Implementation/WebShopUI/WebShopUI/packages.config
@@ -7,6 +7,7 @@
   <package id="Durandal.Transitions" version="2.0.1" targetFramework="net45" />
   <package id="FontAwesome" version="3.2.1" targetFramework="net45" />
   <package id="jQuery" version="2.1.0" targetFramework="net45" />
+  <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.3.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
