--- a/Implementation/WebShopUI/WebShopUI/packages.config
+++ b/Implementation/WebShopUI/WebShopUI/packages.config
@@ -14,6 +14,7 @@
   <package id="RequireJS" version="2.1.11" targetFramework="net45" />
   <package id="RequireJS.Text" version="2.0.7" targetFramework="net45" />
   <package id="Sammy.js" version="0.7.4" targetFramework="net45" />
+  <package id="toastr" version="2.0.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
   <package id="WebActivator" version="1.5.3" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
