Refact; Sign; Cart; OrderingStart

--- a/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
+++ b/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
@@ -73,6 +73,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App\busineslogic\orderingController.js" />
     <Content Include="App\busineslogic\productController.js" />
     <Content Include="App\busineslogic\productTypeController.js" />
     <Content Include="App\busineslogic\UserController.js" />
@@ -84,45 +85,54 @@
     <Content Include="App\core\utils\koMappingsHelper.js" />
     <Content Include="App\core\utils\toast_help.js" />
     <Content Include="App\main.js" />
+    <Content Include="App\viewmodels\ordering\ordering.js" />
+    <Content Include="App\viewmodels\ordering\orderingSummary.js" />
     <Content Include="App\viewmodels\profile\delivery_address.js" />
     <Content Include="App\viewmodels\profile\billing_address.js" />
-    <Content Include="App\viewmodels\breadcrumb.js" />
+    <Content Include="App\viewmodels\navigation\breadcrumb.js" />
     <Content Include="App\viewmodels\cart.js" />
-    <Content Include="App\viewmodels\flickr.js" />
-    <Content Include="App\viewmodels\mainmenu.js" />
+    <Content Include="App\viewmodels\xpelda\flickr.js" />
+    <Content Include="App\viewmodels\navigation\mainmenu.js" />
     <Content Include="App\viewmodels\product.js" />
     <Content Include="App\viewmodels\products.js" />
-    <Content Include="App\viewmodels\oneTextDialog.js" />
-    <Content Include="App\viewmodels\customModal.js" />
-    <Content Include="App\viewmodels\profile.js" />
+    <Content Include="App\viewmodels\xpelda\oneTextDialog.js" />
+    <Content Include="App\viewmodels\xpelda\customModal.js" />
+    <Content Include="App\viewmodels\profile\profile.js" />
     <Content Include="App\viewmodels\profile\prefered_delivery.js" />
     <Content Include="App\viewmodels\profile\profile_data.js" />
     <Content Include="App\viewmodels\shell.js" />
     <Content Include="App\viewmodels\shoppingProcessStatus.js" />
-    <Content Include="App\viewmodels\sidemenu.js" />
-    <Content Include="App\viewmodels\signIn.js" />
+    <Content Include="App\viewmodels\navigation\sidemenu.js" />
+    <Content Include="App\viewmodels\sign\sign.js" />
+    <Content Include="App\viewmodels\sign\signIn.js" />
+    <Content Include="App\viewmodels\sign\signUp.js" />
     <Content Include="App\viewmodels\viewnotfound.js" />
-    <Content Include="App\viewmodels\welcome.js" />
+    <Content Include="App\viewmodels\xpelda\welcome.js" />
+    <Content Include="App\views\ordering\ordering.html" />
+    <Content Include="App\views\ordering\orderingSummary.html" />
     <Content Include="App\views\profile\delivery_address.html" />
     <Content Include="App\views\profile\billing_address.html" />
-    <Content Include="App\views\breadcrumb.html" />
+    <Content Include="App\views\navigation\breadcrumb.html" />
     <Content Include="App\views\cart.html" />
     <Content Include="App\views\detail.html" />
-    <Content Include="App\views\flickr.html" />
-    <Content Include="App\views\mainmenu.html" />
+    <Content Include="App\views\sign\MenuSigIn.html" />
+    <Content Include="App\views\xpelda\flickr.html" />
+    <Content Include="App\views\navigation\mainmenu.html" />
     <Content Include="App\views\product.html" />
     <Content Include="App\views\products.html" />
-    <Content Include="App\views\oneTextDialog.html" />
-    <Content Include="App\views\customModal.html" />
-    <Content Include="App\views\profile.html" />
+    <Content Include="App\views\xpelda\oneTextDialog.html" />
+    <Content Include="App\views\xpelda\customModal.html" />
+    <Content Include="App\views\profile\profile.html" />
     <Content Include="App\views\profile\prefered_delivery.html" />
     <Content Include="App\views\profile\profile_data.html" />
     <Content Include="App\views\shell.html" />
     <Content Include="App\views\shoppingProcessStatus.html" />
-    <Content Include="App\views\sidemenu.html" />
-    <Content Include="App\views\signIn.html" />
+    <Content Include="App\views\navigation\sidemenu.html" />
+    <Content Include="App\views\sign\sign.html" />
+    <Content Include="App\views\sign\signIn.html" />
+    <Content Include="App\views\sign\signUp.html" />
     <Content Include="App\views\viewnotfound.html" />
-    <Content Include="App\views\welcome.html" />
+    <Content Include="App\views\xpelda\welcome.html" />
     <Content Include="App__\durandal\plugins\router.js" />
     <Content Include="App__\main.js" />
     <Content Include="Content\bootstrap-theme.css" />
