--- a/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
+++ b/Implementation/WebShopUI/WebShopUI/WebShopUI.csproj
@@ -77,6 +77,7 @@
     <Content Include="App\busineslogic\productController.js" />
     <Content Include="App\busineslogic\productTypeController.js" />
     <Content Include="App\busineslogic\UserController.js" />
+    <Content Include="App\core\admin\admin.js" />
     <Content Include="App\core\data\data.js" />
     <Content Include="App\core\data\user.js" />
     <Content Include="App\core\multilingual\dictionary.js" />
@@ -85,11 +86,11 @@
     <Content Include="App\core\utils\koMappingsHelper.js" />
     <Content Include="App\core\utils\toast_help.js" />
     <Content Include="App\main.js" />
-    <Content Include="App\viewmodels\admin\createNewType.js" />
-    <Content Include="App\viewmodels\admin\createNewProduct.js" />
+    <Content Include="App\viewmodels\admin\createModType.js" />
+    <Content Include="App\viewmodels\admin\createModProduct.js" />
     <Content Include="App\viewmodels\admin\importProductsFromCSV.js" />
-    <Content Include="App\views\admin\createNewProduct.html" />
-    <Content Include="App\views\admin\createNewType.html" />
+    <Content Include="App\views\admin\createModProduct.html" />
+    <Content Include="App\views\admin\createModType.html" />
     <Content Include="App\viewmodels\ordering\ordering.js" />
     <Content Include="App\viewmodels\ordering\orderingSummary.js" />
     <Content Include="App\viewmodels\profile\delivery_address.js" />
@@ -199,6 +200,7 @@
     <None Include="Scripts\jquery-2.1.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
+    <Content Include="Scripts\jquery.csv-0.71.min.js" />
     <Content Include="Scripts\knockout-3.1.0.js" />
     <Content Include="Scripts\knockout-3.1.0.min.js">
       <DependentUpon>knockout-3.1.0.js</DependentUpon>
