--- a/Implementation/WebShop/packages/repositories.config
+++ b/Implementation/WebShop/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\WebShop\packages.config" />
+  <repository path="..\WebShopApiTest\packages.config" />
 </repositories>
